tests/fixtures/cargo-build/diagnostics.stderr
   Compiling hush v0.1.0
warning: unused variable: `x`
 --> src/foo.rs:10:9
   |
10 |     let x = 5;
   |         ^ help: prefix it with an underscore: `_x`
   |
   = note: `#[warn(unused_variables)]` on by default

error[E0308]: mismatched types
 --> src/bar.rs:20:5
   |
20 |     foo()
   |     ^^^^^ expected `i32`, found `()`

error: aborting due to 1 previous error; 1 warning emitted
